--- a/src/styles/OffreItem.css
+++ b/src/styles/OffreItem.css
@@ -1,14 +1,83 @@
 .entreprise-img{
-    height: 220px;
+    height: 200px;
 	width: 220px;
 	border-radius: 20px;
 	object-fit: cover;
 }
 .offre-itm{
+    width: 220px;
+    height: 308px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: flex-start;
-    background-color: cadetblue;
-    margin: 5px;
+    gap: 5px;
+    background-color: white;
+    box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+.offre-itm:hover{
+    box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.25);
+    background-color: whitesmoke;
+}
+.offre-description{
+    width: 220px;
+    height: 308px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+    background-color: white;
+    box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+
+.entreprise-nom{
+    font-size: 20px;
+    font-weight: bold;
+}
+.wilaya{
+    font-size: 17px;
+    font-weight: 400;
+    
+}
+.price{
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #99693D;
+}
+.description{
+    color: #0f1012;
+    margin-top: 5px;
+    font-size: 0.9em;
+    font-weight: 400;
+    letter-spacing: 14%;
+    line-height: 103%;
+    text-align: center;
+}
+
+.reserver-btn{
+    width: 100px;
+    height: 30px;
+    background-color: #0B5EDB;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    font-size: 0.9em;
+    font-weight: 500;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+.reserver-btn:hover{
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: #0B5EBB;
 }
